# WildCardWielder

./: CMakeLists.txt  Dockerfile  README.md  WordsBasic.txt  card.hpp  main.cpp  wildcardwielder.cpp  wildcardwielder.hpp
.github/workflows/: ci.yaml
datasets/: WordsBasic.txt  current_words.txt  deutsch_karten.txt
